pre-fixed account profile blurred bug

--- a/assets/css/library.css
+++ b/assets/css/library.css
@@ -44,7 +44,7 @@ html[darkmode='1'] {
     margin: 0;
     box-sizing: border-box;
     font-size: 14px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI';
     color: var(--text);
     -webkit-tap-highlight-color: transparent;
 }
@@ -63,7 +63,7 @@ button {
 }
 
 button:hover {
-    filter: brightness(1.16);
+    filter: brightness(.9);
 }
 
 input {
@@ -85,7 +85,7 @@ a:hover {
 }
 
 .time_stats {
-    font-weight: 500;
+    font-weight: 600;
     color: #fff;
     text-shadow: 2px 2px 0 rgba(26, 26, 27, 0.33);
 }
@@ -126,7 +126,7 @@ a:hover {
 }
 
 .form_body {
-    padding: 64px;
+    padding: 64px 42px;
     display: flex;
     flex-direction: column;
     align-items: center;
